src/App.scss
$primary-color: #4cc9f0;
$white-color: white;
$gray-color: gray;
$light-white-color: rgba($color: $white-color, $alpha: 0.5);

@mixin primary-color {
  color: $white-color;
}

@mixin white-color {
  color: $white-color;
}

@mixin border-radius-10 {
  border-radius: 10px;
}

body {
  overflow-x: hidden;
}

::-webkit-scrollbar {
  width: 8px;
  height: 4px;
}

::-webkit-scrollbar-track {
  @include border-radius-10;

  box-shadow: inset 0 0 5px $gray-color;
}
::-webkit-scrollbar-thumb {
  @include border-radius-10;

  background-color: $primary-color;
}

.height-100-p {
  height: 100%;
}

.color-bg-primary {
  background-color: $primary-color;
}

.opacity-8 {
  opacity: .8;
}

.scale-x-1 {
  &:hover{
    overflow-x: hidden;
    transform: scaleX(1.1);
  }
}

.scale-1 {
  &:hover{
    overflow-x: hidden;
    transform: scale(1.1, 1.1);
  }
}

.transform-delay-4 {
  transition: transform 4s;
}

.padding-x-15-p {
  padding: 0 15%;
}

.padding-y-100 {
  padding: 100px 20px;
}

.text-align-center {
  text-align: center;
}

.overflow-x-hidden {
  overflow-x: hidden;
}

.max-width {
  max-width: 2640px;
}

.white-color {
  @include white-color;
}

.circular-icon {
  @include white-color;

  border: 2px solid $white-color;
  width: 25px;
  border-radius: 50%;
  padding: 7px;
  margin: 5px;

  &:hover {
    color: $light-white-color;
  }
}

